working on routes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,6 @@
 <div class="links">
   <span>
-      <a routerLink="/hello" routerLinkActive="active">
-          Hello
-      </a>
+      <a routerLink="/hello" routerLinkActive="active"> Hello </a>
   </span>
 
   <span>
@@ -17,4 +15,5 @@
   </span>
   
 </div>
+
 <router-outlet></router-outlet>
