Added contestants length

--- a/src/app/app/tournament/registration/registration.component.html
+++ b/src/app/app/tournament/registration/registration.component.html
@@ -6,5 +6,5 @@
     <input type="text" [(ngModel)]="players[i]" [placeholder]="['Contestant ' + i]" /><br/>
 </div>
 <div>
-    <button (click)="registerContestants()">Click</button>
+    <button (click)="registerContestants()">Register Contestants</button>
 </div>
