--- a/src/app/app/tournament/registration/registration.component.html
+++ b/src/app/app/tournament/registration/registration.component.html
@@ -1,10 +1,17 @@
-<p>registration works!</p>
 
-<h1> registration component </h1>
+<h1>  Register Players</h1>
 
 <div *ngFor="let value of players; let i=index; trackBy:trackByFn">
     <input type="text" [(ngModel)]="players[i]" [placeholder]="['Contestant ' + i]" /><br/>
 </div>
 <div>
     <button (click)="registerContestants()">Register Contestants</button>
+</div>
+
+<div>
+ <HBox>
+    <button (click)="registerContestants()">Autofill 2 Players</button>
+    <button (click)="registerContestants()">Autofill 4 Players</button>
+    <button (click)="registerContestants()">Autofill 6 Players</button>
+ </HBox>
 </div>
