Added autofill methods

--- a/src/app/app/tournament/registration/registration.component.html
+++ b/src/app/app/tournament/registration/registration.component.html
@@ -13,7 +13,7 @@
 
 <div>
 
-    <button (click)="registerContestants()">Autofill 2 Players</button>
-    <button (click)="registerContestants()">Autofill 4 Players</button>
-    <button (click)="registerContestants()">Autofill 6 Players</button>
+    <button (click)="autofill2()">Autofill 2 Players</button>
+    <button (click)="autofill4()">Autofill 4 Players</button>
+    <button (click)="autofill8()">Autofill 8 Players</button>
 </div>
