Added some code to check brackets page

--- a/src/app/app/tournament/brackets/brackets.component.html
+++ b/src/app/app/tournament/brackets/brackets.component.html
@@ -1,2 +1,5 @@
 <p>brackets works!</p>
 <h1> brackets component </h1>
+<div *ngFor="let value of players; let i=index; trackBy:trackByFn">
+    <input type="text" [(ngModel)]="players[i]" [placeholder]="['Contestant ' + i]" /><br/>
+</div>
