--- a/src/app/app/tournament/brackets/brackets.component.html
+++ b/src/app/app/tournament/brackets/brackets.component.html
@@ -1,5 +1,22 @@
 <p>brackets works!</p>
 <h1> brackets component </h1>
-<div *ngFor="let value of players; let i=index; trackBy:trackByFn">
-    <input type="text" [(ngModel)]="players[i]" [placeholder]="['Contestant ' + i]" /><br/>
+<div >
+    
+    <input type="radio" name="game1" value=game1.player1>{{game1.player1}}
+    <input type="radio" name="game1" value=game1.player2>{{game1.player2}}
+</div>
+<div >
+    
+    <input type="radio" name="game2" value={{game2.player1}}>{{game2.player1}}
+    <input type="radio" name="game2" value={{game2.player2}}>{{game2.player2}}
+</div>
+<div >
+    
+    <input type="radio" name="game3" value={{game3.player1}}>{{game3.player1}}
+    <input type="radio" name="game3" value={{game3.player1}}>{{game3.player2}}
+</div>
+<div >
+    
+    <input type="radio" name="game4" value={{game4.player1}}>{{game4.player1}}
+    <input type="radio" name="game4" value={{game4.player1}}>{{game4.player2}}
 </div>
