--- a/src/app/app/tournament/brackets/brackets.component.html
+++ b/src/app/app/tournament/brackets/brackets.component.html
@@ -1,32 +1,37 @@
 <p>brackets works!</p>
 <h1> brackets component </h1>
 <div >
-    <Label>Game 1</Label>
-    <input type="radio" name="game1" value=game1.player1>{{game1.player1}}
-    <input type="radio" name="game1" value=game1.player2>{{game1.player2}}
-    <br>
+   
+        <input type="radio" value=game1.player1 name = "game1" (click)="game1.setWinner(game1.player1)" class="primary" ng-model="game1.playerWon" >{{game1.player1}}
+        <input type="radio" value=game1.player2 name = "game1" (click)="game1.setWinner(game1.player2)" ng-model="game1.playerWon" >{{game1.player2}}
+   
 </div>
-<div >
+
+<div *ngIf="game2.player1">
     <Label>Game 2</Label>
-    <input type="radio" name="game2" value={{game2.player1}}>{{game2.player1}}
-    <input type="radio" name="game2" value={{game2.player2}}>{{game2.player2}}
+        <input type="radio" value=game2.player1 name = "game2" (click)="game2.setWinner(game2.player1)" class="primary" ng-model="game2.playerWon">{{game2.player1}}
+        <input type="radio" value=game2.player2 name = "game2" (click)="game2.setWinner(game2.player2)" ng-model="game2.playerWon">{{game2.player2}}
     <br>
 </div>
-<div >
+
+<div *ngIf="game3.player1">
     <Label>Game 3</Label>
-    <input type="radio" name="game3" value={{game3.player1}}>{{game3.player1}}
-    <input type="radio" name="game3" value={{game3.player1}}>{{game3.player2}}
+        <input type="radio" value=game3.player1 name = "game3" (click)="game3.setWinner(game3.player1)" class="primary"  ng-model="game3.playerWon">{{game3.player1}}
+        <input type="radio" value=game3.player2 name = "game3"  (click)="game3.setWinner(game3.player2)"  ng-model="game3.playerWon">{{game3.player2}}
     <br>
 </div>
-<div >
+
+<div  *ngIf="game4.player1">
     <Label>Game 4</Label>
-    <input type="radio" name="game4" value={{game4.player1}}>{{game4.player1}}
-    <input type="radio" name="game4" value={{game4.player1}}>{{game4.player2}}
+   
+        <input type="radio" value=game4.player1 name = "game4"  (click)="game4.setWinner(game4.player1)"  class="primary" ng-model="game4.playerWon" >{{game4.player1}}
+        <input type="radio" value=game4.player2 name = "game4"  (click)="game4.setWinner(game4.player2)" ng-model="game4.playerWon" >{{game4.player2}}
+   
     <br>
 </div>
 
 <div>
-    <button (click)="registerContestants()">Cmplete Round </button>
+    <button (click)="completeRound()">Cmplete Round </button>
     <div *ngIf="message">
   <Label>{{message}}</Label>
 </div>
