--- a/src/app/app/tournament/brackets/brackets.component.html
+++ b/src/app/app/tournament/brackets/brackets.component.html
@@ -1,9 +1,10 @@
 <p>brackets works!</p>
 <h1> brackets component </h1>
+<h2>Round number {{roundNumber}}</h2>
 <div >
    
-        <input type="radio" value=game1.player1 name = "game1" (click)="game1.setWinner(game1.player1)" class="primary" ng-model="game1.playerWon" >{{game1.player1}}
-        <input type="radio" value=game1.player2 name = "game1" (click)="game1.setWinner(game1.player2)" ng-model="game1.playerWon" >{{game1.player2}}
+        <input type="radio" value=game1.player1 name = "game1" (click)="game1.setWinner(game1.player1)" required class="primary" ng-model="game1.playerWon" >{{game1.player1}}
+        <input type="radio" value=game1.player2 name = "game1" (click)="game1.setWinner(game1.player2)" required ng-model="game1.playerWon" >{{game1.player2}}
    
 </div>
 
@@ -31,7 +32,7 @@
 </div>
 
 <div>
-    <button (click)="completeRound()">Cmplete Round </button>
+    <button (click)="completeRound()">Complete Round </button>
     <div *ngIf="message">
   <Label>{{message}}</Label>
 </div>
