Added some styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,29 @@
 <div class="links">
-  <span>
+<ul>
+  <li>
       <a routerLink="/hello" routerLinkActive="active"> Hello </a>
-  </span>
-
-  <span>
+  
+  </li>
+  <li><span>
       <a routerLink="/registration" routerLinkActive="active">
           Registration
       </a>
   </span>
-  <span>
+  
+  </li>
+  <li><span>
       <a routerLink="/brackets" routerLinkActive="active">
           Brackets
       </a>
-  </span>
+  </span></li>
+  
+</ul>
+
+  
+
+  
   
 </div>
 
 <router-outlet></router-outlet>
+
