--- a/src/app/app/tournament/brackets/brackets.component.html
+++ b/src/app/app/tournament/brackets/brackets.component.html
@@ -1,41 +1,44 @@
-<p>brackets works!</p>
-<h1> brackets component </h1>
-<h2>Round number {{roundNumber}}</h2>
+<h1>Round number {{roundNumber}}</h1>
+<div *ngIf="message">
+    <Label>{{message}}</Label>
+    </div>
 <div *ngIf="game1.player1">
-    <Label>Game 1</Label>
+    <div><Label>Match 1</Label></div>
         <input type="radio" value=game1.player1 name = "game1" (click)="game1.setWinner(game1.player1)" required class="primary" ng-model="game1.playerWon" >{{game1.player1}}
         <input type="radio" value=game1.player2 name = "game1" (click)="game1.setWinner(game1.player2)" required ng-model="game1.playerWon" >{{game1.player2}}
    
 </div>
+<br>
 
 <div *ngIf="game2.player1">
-    <Label>Game 2</Label>
+    <div><Label>Match 2</Label></div>
         <input type="radio" value=game2.player1 name = "game2" (click)="game2.setWinner(game2.player1)" class="primary" ng-model="game2.playerWon">{{game2.player1}}
         <input type="radio" value=game2.player2 name = "game2" (click)="game2.setWinner(game2.player2)" ng-model="game2.playerWon">{{game2.player2}}
     <br>
 </div>
 
+<br>
+
 <div *ngIf="game3.player1">
-    <Label>Game 3</Label>
+    <div><Label>Match 3</Label></div>
         <input type="radio" value=game3.player1 name = "game3" (click)="game3.setWinner(game3.player1)" class="primary"  ng-model="game3.playerWon">{{game3.player1}}
         <input type="radio" value=game3.player2 name = "game3"  (click)="game3.setWinner(game3.player2)"  ng-model="game3.playerWon">{{game3.player2}}
     <br>
 </div>
+<br>
 
 <div  *ngIf="game4.player1">
-    <Label>Game 4</Label>
+    <div><Label>Match 4</Label></div>
    
         <input type="radio" value=game4.player1 name = "game4"  (click)="game4.setWinner(game4.player1)"  class="primary" ng-model="game4.playerWon" >{{game4.player1}}
         <input type="radio" value=game4.player2 name = "game4"  (click)="game4.setWinner(game4.player2)" ng-model="game4.playerWon" >{{game4.player2}}
    
     <br>
 </div>
+<br>
 
 <div *ngIf="game1.player1">
     <button (click)="completeRound()">Complete Round </button>
     
 </div>
 
-<div *ngIf="message">
-    <Label>{{message}}</Label>
-    </div>
