--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,3 +5,28 @@
 .links a.active {
   background-color: grey;
 }
+
+ul {
+  list-style-type: none;
+  overflow: hidden;
+  background-color: #333333;
+  margin: 0;
+  padding: 0;
+  
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 0 1em 0 0;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #111111;
+}
