--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="links">
 <ul>
   <li>
-      <a routerLink="/hello" routerLinkActive="active"> Hello </a>
+      <a routerLink="/hello" routerLinkActive="active"> Welcome </a>
   
   </li>
   <li><span>
